frontend/src/pages/cases/CasePage.css
@media screen and (min-width: 1100px) {
  .activityPaneContainer {
    flex: 2;
  }
}

@media screen and (max-width: 1100px) {
  .activityPaneContainer {
    display: none;
  }
}

.dark.react-mde > .mde-header {
  background-color: black !important;
  border-bottom: none;
}

.dark.react-mde .mde-header-item path {
  fill: #8c8c8c !important;
}

.dark.react-mde > .mde-header > .mde-tabs > .selected {
  border: 1px solid #595959 !important;
}

.dark.react-mde > .grip {
  background-color: inherit !important;
  border-top: none;
}

.dark.react-mde {
  border: none !important;
}

.dark.react-mde {
  border: 2px solid #262626 !important;
}

.dark.react-mde .mde-preview .mde-preview-content pre {
  background-color: inherit !important;
}

.dark.react-mde .mde-text {
  background-color: inherit !important;
}

.dark .mde-suggestions {
  background-color: #262626;
  color: white;
  border: none;
}

.dark .mde-suggestions li {
  border: none;
}

